[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "display-image"
version = "0.1.1"
dependencies = [
  "cxx-image-io >= 1.0.10", "PyQt6>=6.6.0", "pyqtgraph>=0.13.4"
]
authors = [{name = "Yuan SUN", email = "sunyuan860510@gmail.com"}]
maintainers = [{name = "Yuan SUN", email = "sunyuan860510@gmail.com"}]
description = " PyQt6 Gui App to display the wide range image formats (jpg, png, tif, dng, bmp, and RAWs), with image metadata and histogram."
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["display ", "image", "view", "display image", "image viewer", "raw viewer", "display raw image"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers"
]

[project.scripts]
display-image = "display:main"

